<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">Cabby</string> -->
    <string name="app_name">eyeTravel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="SignupBtn_customer">Sign Up as CUSTOMER</string>
    <string name="SignupBtn_customernotice">Not a driver? Click me to sign up as CUSTOMER</string>
    <string name="SignupBtn_cab">Sign Up as DRIVER</string>
    <string name="SignupBtn_cabnotice">Not a customer? Click me to sign up as DRIVER</string>
    <string name="ContBtn">Continue</string>
    <string name="LogoutBtn">Logout</string>
    <string name="Welcome">Welcome!</string>
    <string name="setDestination">Set Destination</string>
    <string name="offline">Offline Mode</string>
    <string name="debugUsername">Logcat user details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="load_directions">Route</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Map</item>
        <item >Profile</item>
        <!-- <item >Trusted Contacts</item>
        <item >History</item> -->
        <item >About</item>
        <item >Logout</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <!-- <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item> -->
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
