<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2" >

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/from"
        android:textColor="?android:textColorSecondary" />

    <AutoCompleteTextView
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_toRightOf="@+id/from_label"
        android:completionThreshold="3" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/from_label"
        android:layout_below="@+id/from"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/to"
        android:textColor="?android:textColorSecondary" />

    <AutoCompleteTextView
        android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/from"
        android:layout_below="@+id/from"
        android:layout_gravity="fill_horizontal"
        android:completionThreshold="3" />

    <Button
        android:id="@+id/load_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to"
        android:layout_centerHorizontal="true"
        android:text="@string/load_directions" />

</RelativeLayout>